kubernetes/kubernetes_https_configs/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slash-backend
  name: slash-backend
spec:
  ports:
    - name: https
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: slash-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: slash-backend
  name: slash-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slash-backend
  template:
    metadata:
      labels:
        app: slash-backend
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/loganwilliams0/slash/slash-backend:latest
          imagePullPolicy: Always
          name: slash-backend
          ports:
            - containerPort: 8080
              name: https
              protocol: TCP
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: slash-backend
  name: slash-backend
spec:
  port:
    targetPort: https
  to:
    kind: Service
    name: slash-backend
