kubernetes/kubernetes_https_configs/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slash-frontend
  name: slash-frontend
spec:
  ports:
    - name: https
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: slash-frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: slash-frontend
  name: slash-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slash-frontend
  template:
    metadata:
      labels:
        app: slash-frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: https://slash-backend:8080/api
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/loganwilliams0/slash/slash-frontend:latest
          imagePullPolicy: Always
          name: slash-frontend
          ports:
            - containerPort: 3000
              name: https
              protocol: TCP
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: slash-frontend
  name: slash-frontend
spec:
  port:
    targetPort: https
  to:
    kind: Service
    name: slash-frontend
